// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar (1) Should render small size 1`] = `
Array [
  <span
    className="user-avatar small"
    style={
      Object {
        "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
      }
    }
  />,
  <a
    href="/@good-karma"
    onClick={[Function]}
  >
    good-karma
  </a>,
]
`;

exports[`UserAvatar (2) Should render normal size 1`] = `
Array [
  <span
    className="user-avatar normal"
    style={
      Object {
        "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
      }
    }
  />,
  <a
    href="/@good-karma"
    onClick={[Function]}
  >
    good-karma
  </a>,
]
`;

exports[`UserAvatar (3) Should render medium size 1`] = `
Array [
  <span
    className="user-avatar medium"
    style={
      Object {
        "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/medium)",
      }
    }
  />,
  <a
    href="/@good-karma"
    onClick={[Function]}
  >
    good-karma
  </a>,
]
`;

exports[`UserAvatar (4) Should render large size 1`] = `
Array [
  <span
    className="user-avatar large"
    style={
      Object {
        "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/medium)",
      }
    }
  />,
  <a
    href="/@good-karma"
    onClick={[Function]}
  >
    good-karma
  </a>,
]
`;

exports[`UserAvatar (5) Should render xlarge size 1`] = `
Array [
  <span
    className="user-avatar xLarge"
    style={
      Object {
        "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/large)",
      }
    }
  />,
  <a
    href="/@good-karma"
    onClick={[Function]}
  >
    good-karma
  </a>,
]
`;
